{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 444,
  "lineage": "fbc3b089-d6af-2b47-747d-6e3f2fae0971",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ins_vpcA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-070b08ba9bf5b6c05",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070b08ba9bf5b6c05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00b1dd3017be612f5",
            "private_dns": "ip-10-10-1-114.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.114",
            "public_dns": "ec2-54-237-158-104.compute-1.amazonaws.com",
            "public_ip": "54.237.158.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e51450ba4553b6f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0653e9f51c1d53e02",
            "tags": {
              "Name": "Instance-VPC-A"
            },
            "tags_all": {
              "Name": "Instance-VPC-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e8027410be8efe53"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-A",
            "aws_subnet.sub-A",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ins_vpcB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d3183af565a0a95d",
            "arn": "arn:aws:ec2:us-east-2:975266691648:instance/i-0a88cd2daf39712f6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a88cd2daf39712f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df82c120495abe0c",
            "private_dns": "ip-35-10-1-36.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "35.10.1.36",
            "public_dns": "ec2-18-222-59-168.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.59.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff5a80cb6599dfc2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0949cdeed108907df",
            "tags": {
              "Name": "Instance-VPC-B"
            },
            "tags_all": {
              "Name": "Instance-VPC-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05a854be918304dba"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-B",
            "aws_subnet.sub-B",
            "aws_vpc.B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ins_vpcC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d951b011aa0b2c19",
            "arn": "arn:aws:ec2:ap-south-1:975266691648:instance/i-05e2f4d3c03f58151",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e2f4d3c03f58151",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-053b2fa4c7031d386",
            "private_dns": "ip-55-10-1-98.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "55.10.1.98",
            "public_dns": "ec2-15-207-51-61.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.51.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-084b31c17403b5736",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3035d7074d85873",
            "tags": {
              "Name": "Instance-VPC-C"
            },
            "tags_all": {
              "Name": "Instance-VPC-C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ccfcfc7d985af1e7"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-C",
            "aws_subnet.sub-C",
            "aws_vpc.C"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gwA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:internet-gateway/igw-014e053e554ee271a",
            "id": "igw-014e053e554ee271a",
            "owner_id": "975266691648",
            "tags": {
              "Name": "IGW-A"
            },
            "tags_all": {
              "Name": "IGW-A"
            },
            "vpc_id": "vpc-0141afb41624db9f4"
          },
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gwB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975266691648:internet-gateway/igw-0bbb85b83922857dc",
            "id": "igw-0bbb85b83922857dc",
            "owner_id": "975266691648",
            "tags": {
              "Name": "IGW-B"
            },
            "tags_all": {
              "Name": "IGW-B"
            },
            "vpc_id": "vpc-033a86fe9e320d8e9"
          },
          "dependencies": [
            "aws_vpc.B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gwC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975266691648:internet-gateway/igw-09d7d675548d5f853",
            "id": "igw-09d7d675548d5f853",
            "owner_id": "975266691648",
            "tags": {
              "Name": "IGW-C"
            },
            "tags_all": {
              "Name": "IGW-C"
            },
            "vpc_id": "vpc-0dc49030d95a5e529"
          },
          "dependencies": [
            "aws_vpc.C"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcA_to_vpcB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "35.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0174e6dcb15f51ccd2207829524",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0174e6dcb15f51ccd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0e2722bc8ea3842f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gwA",
            "aws_route_table.rt-a",
            "aws_vpc.A",
            "aws_vpc.B",
            "aws_vpc_peering_connection.vpc_peer_A_to_B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcA_to_vpcC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "55.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0174e6dcb15f51ccd1822780404",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0174e6dcb15f51ccd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-007e323ed030c0dc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gwA",
            "aws_route_table.rt-a",
            "aws_vpc.A",
            "aws_vpc.C",
            "aws_vpc_peering_connection.vpc_peer_C_to_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcB_to_vpcA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fe69ab4d6da34ff8519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe69ab4d6da34ff8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0e2722bc8ea3842f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gwB",
            "aws_route_table.rt-b",
            "aws_vpc.A",
            "aws_vpc.B",
            "aws_vpc_peering_connection.vpc_peer_A_to_B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcB_to_vpcC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "55.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fe69ab4d6da34ff81822780404",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe69ab4d6da34ff8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f1322fe51652512d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gwB",
            "aws_internet_gateway.gwC",
            "aws_route_table.rt-b",
            "aws_route_table.rt-c",
            "aws_vpc.B",
            "aws_vpc.C",
            "aws_vpc_peering_connection.vpc_peer_B_to_C"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcC_to_vpcA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-018a989087f403227519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018a989087f403227",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-007e323ed030c0dc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gwC",
            "aws_route_table.rt-c",
            "aws_vpc.A",
            "aws_vpc.C",
            "aws_vpc_peering_connection.vpc_peer_C_to_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcC_to_vpcB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "35.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-018a989087f4032272207829524",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018a989087f403227",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-007e323ed030c0dc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gwC",
            "aws_route_table.rt-c",
            "aws_vpc.A",
            "aws_vpc.B",
            "aws_vpc.C",
            "aws_vpc_peering_connection.vpc_peer_C_to_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:route-table/rtb-0174e6dcb15f51ccd",
            "id": "rtb-0174e6dcb15f51ccd",
            "owner_id": "975266691648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-014e053e554ee271a",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "My_RT-A"
            },
            "tags_all": {
              "Name": "My_RT-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0141afb41624db9f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gwA",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975266691648:route-table/rtb-0fe69ab4d6da34ff8",
            "id": "rtb-0fe69ab4d6da34ff8",
            "owner_id": "975266691648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0bbb85b83922857dc",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "My_RT-B"
            },
            "tags_all": {
              "Name": "My_RT-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-033a86fe9e320d8e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gwB",
            "aws_vpc.B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975266691648:route-table/rtb-018a989087f403227",
            "id": "rtb-018a989087f403227",
            "owner_id": "975266691648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-09d7d675548d5f853",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "My_RT-C"
            },
            "tags_all": {
              "Name": "My_RT-C"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc49030d95a5e529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gwC",
            "aws_vpc.C"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2c0a3ad8b343a9d",
            "route_table_id": "rtb-0174e6dcb15f51ccd",
            "subnet_id": "subnet-0653e9f51c1d53e02"
          },
          "dependencies": [
            "aws_internet_gateway.gwA",
            "aws_route_table.rt-a",
            "aws_subnet.sub-A",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fc84b601362b394",
            "route_table_id": "rtb-0fe69ab4d6da34ff8",
            "subnet_id": "subnet-0949cdeed108907df"
          },
          "dependencies": [
            "aws_internet_gateway.gwB",
            "aws_route_table.rt-b",
            "aws_subnet.sub-B",
            "aws_vpc.B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06716968485869ebb",
            "route_table_id": "rtb-018a989087f403227",
            "subnet_id": "subnet-0d3035d7074d85873"
          },
          "dependencies": [
            "aws_internet_gateway.gwC",
            "aws_route_table.rt-c",
            "aws_subnet.sub-C",
            "aws_vpc.C"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:security-group/sg-0e8027410be8efe53",
            "description": "sg for VPC-A",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8027410be8efe53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "all_traffic",
            "name_prefix": "",
            "owner_id": "975266691648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-A"
            },
            "tags_all": {
              "Name": "sg-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0141afb41624db9f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975266691648:security-group/sg-05a854be918304dba",
            "description": "sg for VPC-B",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a854be918304dba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "all_traffic",
            "name_prefix": "",
            "owner_id": "975266691648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-B"
            },
            "tags_all": {
              "Name": "sg-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-033a86fe9e320d8e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975266691648:security-group/sg-0ccfcfc7d985af1e7",
            "description": "sg for VPC-B",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccfcfc7d985af1e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "all_traffic",
            "name_prefix": "",
            "owner_id": "975266691648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-C"
            },
            "tags_all": {
              "Name": "sg-C"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc49030d95a5e529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.C"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-0653e9f51c1d53e02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0653e9f51c1d53e02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0141afb41624db9f4"
          },
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975266691648:subnet/subnet-0949cdeed108907df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "35.10.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0949cdeed108907df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-033a86fe9e320d8e9"
          },
          "dependencies": [
            "aws_vpc.B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975266691648:subnet/subnet-0d3035d7074d85873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "55.10.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3035d7074d85873",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dc49030d95a5e529"
          },
          "dependencies": [
            "aws_vpc.C"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:vpc/vpc-0141afb41624db9f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-04f1cb581550e7d37",
            "default_route_table_id": "rtb-02edf506c3cbdc979",
            "default_security_group_id": "sg-03e86bc68244b3a7e",
            "dhcp_options_id": "dopt-00b696a765a7e9c3c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0141afb41624db9f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02edf506c3cbdc979",
            "owner_id": "975266691648",
            "tags": {
              "Name": "VPC-A"
            },
            "tags_all": {
              "Name": "VPC-A"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975266691648:vpc/vpc-033a86fe9e320d8e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "35.10.0.0/16",
            "default_network_acl_id": "acl-076e1a8a3d3ee0f34",
            "default_route_table_id": "rtb-09a73e989545b3447",
            "default_security_group_id": "sg-026b775094c45a2f5",
            "dhcp_options_id": "dopt-0e580c3a33ceacc27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033a86fe9e320d8e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a73e989545b3447",
            "owner_id": "975266691648",
            "tags": {
              "Name": "VPC-B"
            },
            "tags_all": {
              "Name": "VPC-B"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975266691648:vpc/vpc-0dc49030d95a5e529",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "55.10.0.0/16",
            "default_network_acl_id": "acl-0143420c1370ac5dd",
            "default_route_table_id": "rtb-0f8a31238b795e62b",
            "default_security_group_id": "sg-0bfa476c31a7744f4",
            "dhcp_options_id": "dopt-0b4e0b055a5005308",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc49030d95a5e529",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8a31238b795e62b",
            "owner_id": "975266691648",
            "tags": {
              "Name": "VPC-C"
            },
            "tags_all": {
              "Name": "VPC-C"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peer_A_to_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-0e2722bc8ea3842f0",
            "peer_owner_id": "975266691648",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-033a86fe9e320d8e9",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-A to VPC-B connection request"
            },
            "tags_all": {
              "Name": "VPC-A to VPC-B connection request"
            },
            "vpc_id": "vpc-0141afb41624db9f4"
          },
          "dependencies": [
            "aws_vpc.A",
            "aws_vpc.B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peer_B_to_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-0f1322fe51652512d",
            "peer_owner_id": "975266691648",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-0dc49030d95a5e529",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-B to VPC-C connection request"
            },
            "tags_all": {
              "Name": "VPC-B to VPC-C connection request"
            },
            "vpc_id": "vpc-033a86fe9e320d8e9"
          },
          "dependencies": [
            "aws_vpc.B",
            "aws_vpc.C"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peer_C_to_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-007e323ed030c0dc9",
            "peer_owner_id": "975266691648",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0141afb41624db9f4",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-A to VPC-C connection request"
            },
            "tags_all": {
              "Name": "VPC-A to VPC-C connection request"
            },
            "vpc_id": "vpc-0dc49030d95a5e529"
          },
          "dependencies": [
            "aws_vpc.A",
            "aws_vpc.C"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer_accept_A_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-007e323ed030c0dc9",
            "peer_owner_id": "975266691648",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0141afb41624db9f4",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-C to VPC-A connection accept"
            },
            "tags_all": {
              "Name": "VPC-C to VPC-A connection accept"
            },
            "vpc_id": "vpc-0dc49030d95a5e529",
            "vpc_peering_connection_id": "pcx-007e323ed030c0dc9"
          },
          "dependencies": [
            "aws_vpc.A",
            "aws_vpc.C",
            "aws_vpc_peering_connection.vpc_peer_C_to_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer_accept_B_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0e2722bc8ea3842f0",
            "peer_owner_id": "975266691648",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-033a86fe9e320d8e9",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-A to VPC-B connection accept"
            },
            "tags_all": {
              "Name": "VPC-A to VPC-B connection accept"
            },
            "vpc_id": "vpc-0141afb41624db9f4",
            "vpc_peering_connection_id": "pcx-0e2722bc8ea3842f0"
          },
          "dependencies": [
            "aws_vpc.A",
            "aws_vpc.B",
            "aws_vpc_peering_connection.vpc_peer_A_to_B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer_accept_C_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0f1322fe51652512d",
            "peer_owner_id": "975266691648",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-0dc49030d95a5e529",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-C to VPC-B connection accept"
            },
            "tags_all": {
              "Name": "VPC-C to VPC-B connection accept"
            },
            "vpc_id": "vpc-033a86fe9e320d8e9",
            "vpc_peering_connection_id": "pcx-0f1322fe51652512d"
          },
          "dependencies": [
            "aws_vpc.B",
            "aws_vpc.C",
            "aws_vpc_peering_connection.vpc_peer_B_to_C"
          ]
        }
      ]
    }
  ]
}